--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -2,7 +2,7 @@ name: client
 on:
   push:
     branches:
-      - <?>
+      - reference
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -10,10 +10,10 @@ jobs:
       - name: Checkout source code.
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: <?>
+        run: npm install
         working-directory: ./my-agora-states-client
       - name: Build
-        run: <?>
+        run: npm build
         working-directory: ./my-agora-states-client
       - name: SHOW AWS CLI VERSION
         env:
@@ -21,15 +21,15 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          <?>
+          aws --version
       - name: Sync Bucket
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws s3 <?> \
+          aws s3 sync \
             --region ap-northeast-2 \
-            build s3://<?> \
+            build s3://My-Bucket-Name \
             --delete
-        working-directory: <?>
+        working-directory: ./my-agora-states-client
